curd operation api
